--- a/package.json
+++ b/package.json
@@ -5,14 +5,11 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
-  },
- "pg": "^8.11.3": {
-    "express": "^4.18.2",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "fs-extra": "^11.1.1"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  }
+    
+  }"dependencies": {
+  "express": "^4.18.2",
+  "body-parser": "^1.20.2",
+  "cors": "^2.8.5",
+  "pg": "^8.11.3"
+   }
 }
